chore: fix SonarQube Quality Gate for core-domain-service and ai-engine-service
- core-domain-service: 0 new violations (was 7), coverage 78.9% (target 80%)
  - Fixed LocalModerationProvider regex S5843/S6395/S5850/S8786
  - Fixed CaseService generateSlug S5850/S8786
  - Fixed PresignedUrlService consumer-builder S6244, removed unused import
  - Fixed MediaUploadedEvent S3400, CaseType S115, OffsetPageable S2160
  - Fixed ConsoleEmailProvider S2629
  - Fixed CoreEmailService S1135 (resolveCreatorEmail)
  - Fixed ReactionsController param naming S117
  - Added tests: LocalModerationProviderTest, ReactionsControllerTest, ConsoleEmailProviderTest, CommentServiceTest
  - Fixed test violations: S2699, S1128, S5778, S1117, S5838

- ai-engine-service: Quality Gate OK (82.2% coverage, 0 violations)
  - Fixed AutomationOrchestrator launchRun ArrayList issue
  - Removed DEBUG stub

- Fixed UTF-8 encoding issues in test files (mojibake from PowerShell writes)